src/objects/Address_Details__c.object
<CustomObject>
    <description>Object to hold unit/level number information for which ever postal code it is applicable.</description>
    <fields>
        <fullName>Identifier__c</fullName>
        <formula>Postal_Code__c + &apos;;&apos; + Level_Number_Formatted__c + &apos;;&apos; + Unit_Number_Formatted__c</formula>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>26</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_Number_Formatted__c</fullName>
        <formula>IF( LEN(Level__c) = 1   , &apos;0&apos;+Level__c , Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level Number Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <referenceTo>Singpost_Address__c</referenceTo>
        <relationshipLabel>Address Details</relationshipLabel>
        <relationshipName>Address_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Postal_code_text__c</fullName>
        <label>Postal Code Text</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number_Formatted__c</fullName>
        <formula>IF( LEN(Unit__c) = 1 , &apos;0&apos;+Unit__c , Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingCode__c</fullName>
        <label>buildingCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingNo__c</fullName>
        <label>buildingNo</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Address Detail</label>
    <nameField>
        <label>Address Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>